--- a/faq/upgrades-downgrades/upgrades.mdx
+++ b/faq/upgrades-downgrades/upgrades.mdx
@@ -21,13 +21,13 @@ import { CtaButton } from "/snippets/cta-button.mdx";
     </ul>
     <CtaButton label="Upgrade to a bigger plan" link="../upgrades-downgrades/upgrade-plan" />
   </Card>
-  <Card title="🧩 Individual Resource Upgrades">
+  <Card title="🧩 Upgrade Components">
     <ul>
       <li>Add RAM, vCPU, disk, or IP addresses individually.</li>
       <li>Keep your existing plan while scaling only what you need.</li>
       <li>Combine with traffic pool assignments for bursty workloads.</li>
     </ul>
-    <CtaButton label="Increase individual resources" link="../upgrades-downgrades/upgrade-resources" />
+    <CtaButton label="Upgrade components" link="../upgrades-downgrades/upgrade-resources" />
   </Card>
 </CardGroup>
 
