--- a/misc/reporting-abuse.mdx
+++ b/misc/reporting-abuse.mdx
@@ -1,28 +1,59 @@
 ---
 title: "Reporting Abuse"
 sidebarTitle: "* Report Abuse"
-description: "Learn how to submit abuse notifications to the EDBB abuse desk, what details to include, and how we handle reports."
+description: "Send well-documented abuse notifications to the EDBB abuse desk and understand what evidence we need to investigate fast."
 ---
 
-## How to Correctly Report Abuse
+## Reach the EDBB Abuse Team
 
-The EDBB abuse desk handles notifications, coordinates mitigation, and communicates with authorities when necessary. Accurate reports help us respond quickly.
+<Info>
+  Suspected misuse of EDBB infrastructure should be reported directly to
+  <strong>abuse@edbb.com</strong>. Include a clear subject line such as
+  “Abuse report – IP 203.0.113.10” so our queue can triage the case quickly.
+</Info>
 
-### Where to submit abuse reports
+- ✉️ Send reports in **English** so the team can process them without delay.  
+- ✅ Use a mailbox that accepts replies; we may need clarification or extra logs.  
+- ⏱️ Verified complaints are reviewed promptly and escalated internally if emergency action is required.
 
-If you notice EDBB services being used in violation of our policies or applicable law, email **abuse@edbb.com**. Every substantiated report is reviewed promptly.
+---
 
-### How to create an abuse report
+## Build a Complete Abuse Report
 
-Please include the following information in your report.
+Organise the facts so our investigators can reproduce the issue. Each entry below is required unless noted otherwise.
 
-- Submit your notification in English.
-- Send it to **abuse@edbb.com**
-- Do not send notifications from an address that can not be replied to (no-reply@)
-- Include your name, address, telephone number and email address.
-- All notifications must include the IP address where the reported content is located, or from where the conduct occurred, plus a timestamp including timezone (preferably UTC). The IP address must belong to EDBB. (For spam reports, include full headers or attach the original message.)
-- The notification should reference a static URL hosted on EDBB infrastructure where the content can be inspected.
-- Include one IP address per notification. If you would like to submit a notification for more than one IP address, please send multiple notifications.
-- Please describe the content or behavior that you wish to report and explain why it is inappropriate, how it is infringing your rights, violating applicable law, netiquette or the terms of service.
-- For trademark infringement notifications: Please include the registration details (including registration number) of the infringed trademark.
-- If you believe your copyright has been infringed, please include a description of your work along with either a copy of the work or a web page address where the original content can be located.
+### Contact & context
+
+- Your **full name**, organisation (if applicable), phone number, and email address.  
+- The **law, policy, or acceptable-use clause** you believe is being violated.  
+- A brief description of the impact (e.g., phishing, DDoS, copyright infringement).
+
+### Evidence & scope
+
+- The **EDBB IP address** or hostname involved. Limit reports to **one IP per email**—send separate reports for multiple systems.  
+- A precise **timestamp with timezone** (UTC preferred). If activity spans multiple moments, list each with matching IP data.  
+- Static **URLs or download locations** for hosted content so we can inspect the material directly.  
+- For spam complaints, attach the **original message with full headers** (RFC 822 format).
+
+### Supporting material
+
+- **Screenshots, packet captures, or log excerpts** that demonstrate the behaviour.  
+- For **copyright notices**, describe the original work and provide a copy or
+  public link to it.  
+- For **trademark complaints**, reference the registration number and jurisdiction.  
+- If your report comes from a third party (e.g., a client or law-enforcement contact), note the **authority under which you are acting**.
+
+<Callout type="warning">
+  Reports missing timestamps, source IPs, or actionable evidence cannot be processed.
+  Double-check the details before you hit send.
+</Callout>
+
+---
+
+## What Happens Next
+
+- You’ll receive an acknowledgement once your email is in the queue.  
+- The abuse desk validates the evidence, notifies the affected customer, and coordinates mitigation or service suspension where appropriate.  
+- Follow-up questions arrive from the same **abuse@edbb.com** mailbox—respond promptly so the case does not stall.
+
+Need to retract a report or send additional proof? Reply to the original ticket thread so the history stays together.
