--- a/misc/security-compliance.mdx
+++ b/misc/security-compliance.mdx
@@ -7,106 +7,109 @@ createdAt: "Mon Apr 28 2025 02:00:00 GMT+0200 (Central European Summer Time)"
 updatedAt: "Mon Apr 28 2025 02:00:00 GMT+0200 (Central European Summer Time)"
 ---
 
-## 🔒 Security, Compliance & Certifications
+## EDBB Security Posture at a Glance
 
-At **EDBB**, security, compliance, and reliability come first. Our VPS platform runs on world-class **Equinix** and **Interxion/Digital Realty** facilities certified against **ISO 27001, PCI DSS, and SOC 2**, and aligned with frameworks like **NIST CSF and CIS Controls**. Combined with our experienced security team and transparent incident reporting, this ensures a **trusted, standards-aligned platform** for businesses worldwide.
+<Info>
+  Security is baked into the way EDBB designs, operates, and audits its VPS
+  platform. We partner with Tier III+ facilities, enforce strong operational
+  controls, and publish status updates openly so customers know where their
+  workloads stand.
+</Info>
 
----
-
-## 🛡️ Compliance Standards
-
-- **PCI DSS** – We process payment card data securely and in compliance with PCI DSS requirements.
-- **GDPR** – We strictly follow the General Data Protection Regulation to protect the personal data of individuals in the European Union.
-
----
-
-## 🌐 Alignment with Additional Standards & Frameworks
-
-By applying security best practices across our operations, **EDBB aligns its processes with the control objectives of several international standards and frameworks**. While we are not formally certified against these frameworks, our practices ensure a strong baseline of compliance and security:
-
-- **ISO/IEC 27002** – Code of practice for information security controls.
-- **ISO/IEC 27018** – Protection of personal data in cloud environments.
-- **NIST Cybersecurity Framework (CSF)** – Identify, Protect, Detect, Respond, Recover.
-- **CIS Critical Security Controls** – Prioritized best practices for cyber defense.
-- **OWASP Top 10** – Guidance for secure web application development.
-- **Cloud Security Alliance (CSA) Cloud Controls Matrix** – Cloud industry controls, mapped to multiple standards.
-- **ENISA Guidelines (EU)** – Recommendations for information and network security.
+- **Core certifications**: PCI DSS attestation for card data handling, ISO 27001-certified facilities, SOC 2-ready control environment.  
+- **Privacy-first**: GDPR compliance, privacy impact assessments, and EU-hosted support tooling.  
+- **Global infrastructure**: Equinix and Interxion/Digital Realty provide resilient power, connectivity, and physical security.
 
 ---
 
-## 🛠 Security Practices
+## Compliance & Framework Mapping
 
-- **Regular security audits & vulnerability assessments** – Ensuring weaknesses are identified and resolved quickly.
-- **Intrusion Detection Systems (IDS)** – Monitoring our infrastructure for signs of malicious activity.
-- **Patch Management** – EDBB applies regular security updates for operating systems and applications to mitigate vulnerabilities.
-- **Advanced monitoring & 24/7 support** – Continuous monitoring for security events and a responsive support team for security-related issues.
+<CardGroup cols={2}>
+  <Card title="Formal Certifications">
+    <ul>
+      <li>PCI DSS – scoped for billing touchpoints</li>
+      <li>ISO 27001 – via our primary data center partners</li>
+      <li>SOC 1 & SOC 2 Type II – available through Interxion and Equinix</li>
+    </ul>
+  </Card>
+  <Card title="Framework Alignment">
+    <ul>
+      <li>NIST Cybersecurity Framework</li>
+      <li>CIS Critical Security Controls</li>
+      <li>ISO/IEC 27002 & 27018 controls</li>
+      <li>Cloud Security Alliance CCM</li>
+      <li>OWASP Top 10 secure development practices</li>
+    </ul>
+  </Card>
+</CardGroup>
 
----
-
-## 👩‍💻 Organizational Measures
-
-1. **Employee Training** – Staff are regularly trained on data security best practices, such as identifying phishing attempts, using strong passwords, and handling sensitive data properly.
-2. **Access Management** – We apply the principle of least privilege, granting employees only the access they need to perform their roles.
-3. **Incident Response Plan** – Our incident response plan is tested regularly to ensure rapid, effective handling of potential security breaches.
-4. **Third-Party Risk Management** – We evaluate the compliance and security practices of any third-party vendors or partners with access to sensitive data.
-5. **Regular Audits** – Both internal and external audits are conducted to identify and address potential compliance gaps or vulnerabilities.
-
----
-
-## 🔎 Transparency & Verification
-
-- **Network Authority**: EDBB operates on the **AS57169** network and maintains IP allocations with RIPE NCC and [ARIN](https://search.arin.net/rdap/?query=EGL-51).
-- **Incident Transparency**: Service status and past incidents are published at [status.edbb.com](https://status.edbb.com).
-- **Abuse & Security Contact**: Please report any abuse or security concerns to [abuse@edbb.com](mailto:abuse@edbb.com).
-- **Audit Timeline**: This page and its contents are reviewed every 6 months; Last update: September 21, 2025
-
----
-
-## 🏢 Certified Data Centers
-
-EDBB VPS infrastructure runs in Tier III+ certified data centers such as **Equinix** and **Interxion** (Digital Realty). We publish location details on every location page of our website (see the _Looking Glass_ section, e.g. [Frankfurt VPS Hosting](https://www.edbb.com/vps-hosting/germany-frankfurt#looking-glass)). Customers may verify certification details directly on the websites of the respective data center providers.
-
-**Example: Equinix FR5 (Frankfurt, Germany)**
-
-**Address**: Kleyerstraße 90, 60326 Frankfurt am Main, Germany
-
-**Certifications**:
-
-- Climate Neutral Data Centre Pact
-- Cyber Essentials
-- EU Code of Conduct
-- ISO 14001
-- ISO 22301
-- ISO 27001
-- ISO 45001
-- ISO 50001
-- ISO 9001
-- PCI DSS
-- SOC 1 Type II
-- SOC 2 Type II
-
-🔗 [Equinix Certifications](https://www.equinix.com/data-centers/design/standards-compliance)
-🔗 [Interxion/Digital Realty Certifications](https://www.digitalrealty.com/data-centers/design/certifications-compliance)
+<Callout type="tip">
+  Need a signed attestation or detailed control mapping? Email
+  <strong>compliance@edbb.com</strong> with your questionnaire and the intended
+  use case.
+</Callout>
 
 ---
 
-## 📑 Questionnaires & ISO 27001
+## Operational Security Layers
 
-Instead of filling out external questionnaires, we maintain this public compliance page to ensure clients always have the latest verified information.
+- **Continuous monitoring** – Real-time metrics, IDS/IPS feeds, and anomaly alerts watched by our on-call engineers.  
+- **Patch cadence** – Critical fixes deploy within vendor SLAs; monthly maintenance windows capture the remainder.  
+- **Change control** – Peer-reviewed changes, automatic rollbacks, and release notes published to the status page.  
+- **24/7 incident response** – A documented runbook plus cross-functional escalation paths keep response times low.
+
+### Safeguarding the Organisation
+
+1. **Security awareness** – Mandatory onboarding and refresher courses covering phishing, data handling, and privacy.  
+2. **Scoped access** – Fine-grained IAM with short-lived credentials; production access is logged and reviewed.  
+3. **Tabletop exercises** – Quarterly simulations validate our incident response, ransomware playbooks, and disaster recovery.  
+4. **Vendor diligence** – Third parties undergo risk reviews, contractual safeguards, and periodic reassessment.  
+5. **Internal & external audits** – Compliance checkpoints every six months, supplemented by penetration testing.
 
 ---
 
-## 🌍 Code of Ethics & Conduct
+## Trust & Transparency
 
- 1. **Sustainable Practices** – Commitment to responsible, green, and sustainable digital infrastructure.
- 2. **Compliance** – Adherence to GDPR, IT security, and corporate governance requirements.
- 3. **Conflict of Interest** – Always acting in the best interest of our customers.
- 4. **Human Rights & Fair Labor** – Respect for international human rights and fair working conditions.
- 5. **Environmental Protection** – Use of energy-efficient server technologies and eco-friendly hosting.
- 6. **Health & Safety** – Safe work environments and regular security awareness training.
- 7. **Supply Chain Responsibility** – Working only with transparent and responsible partners.
- 8. **Data Protection** – GDPR-compliant processing and advanced encryption.
- 9. **Technical Compliance** – Conformance with product and IT security standards.
-10. **Business Continuity** – Comprehensive risk management and tested contingency plans.
-11. **Code Enforcement** – Mandatory adherence for all staff and partners.
-12. **Reporting Mechanisms** – Secure channels for reporting and investigating violations.
+- **Network footprint**: EDBB operates AS57169 with allocations at RIPE NCC and [ARIN](https://search.arin.net/rdap/?query=EGL-51).  
+- **Service history**: Uptime reports, maintenance notes, and postmortems live at [status.edbb.com](https://status.edbb.com).  
+- **Security desk**: Report abuse or suspicious activity to [abuse@edbb.com](mailto:abuse@edbb.com); urgent matters receive priority handling.  
+- **Review cycle**: This page is updated at least twice per year, or sooner if our certification landscape changes.
+
+---
+
+## Data Center Partners & Example Site
+
+EDBB capacity spans multiple European and international metros. Facility-level controls include biometric access, CCTV, dual power feeds, and on-site security.
+
+### Frankfurt: Equinix FR5
+
+| Detail | Information |
+| --- | --- |
+| Address | Kleyerstraße 90, 60326 Frankfurt am Main, Germany |
+| Highlights | ISO 22301, ISO 27001, ISO 50001, ISO 9001, PCI DSS, SOC 1 & SOC 2 Type II, Climate Neutral Data Centre Pact |
+| Learn more | [Equinix certifications](https://www.equinix.com/data-centers/design/standards-compliance) |
+
+Customers can cross-reference other metro sites directly with the provider:  
+- [Interxion/Digital Realty compliance hub](https://www.digitalrealty.com/data-centers/design/certifications-compliance)  
+- Local EDBB location pages (see the “Looking Glass” section for coordinates and facility notes).
+
+---
+
+## Questionnaires & Documentation Access
+
+We keep this page current so most due diligence can be completed without a custom NDA. If your procurement flow requires tailored responses, send the form to **compliance@edbb.com** and include:  
+- Target customer name and region  
+- Intended workload or regulatory driver  
+- Deadlines for submission
+
+---
+
+## Code of Ethics & Responsible Operations
+
+- **Sustainability** – Preference for carbon-neutral data centers, energy-efficient hardware, and responsible e-waste disposal.  
+- **Customer-first decisions** – Conflicts of interest are escalated and documented; we avoid lock-in tactics.  
+- **Human rights** – Inclusive hiring, fair compensation, and safe workplaces across our supply chain.  
+- **Environmental & social governance** – Participation in community initiatives and transparent reporting on ESG metrics.  
+- **Data stewardship** – Encryption in transit and at rest, GDPR-aligned processing, and privacy-by-design principles.  
+- **Business continuity** – Regular backup testing, multi-region failover capability, and rehearsed recovery drills.  
+- **Speak-up culture** – Confidential channels allow staff, partners, and customers to flag concerns without retaliation.
