--- a/vps-management/bring-your-own-iso.mdx
+++ b/vps-management/bring-your-own-iso.mdx
@@ -6,58 +6,82 @@ description: "EDBB lets you mount your own ISO images—install custom OS builds
 
 # Bring Your Own ISO
 
-Have a custom installer, recovery toolkit, or bare-metal backup? Upload the ISO directly to the EDBB platform and boot it just like a local image.
-
-![Upload Custom ISO](/assets/vps-upload-iso.webp)
-
----
-
-## Before You Begin
-
-- Confirm the ISO is accessible via a direct HTTP or HTTPS download URL (no redirects, login prompts, or temporary links).  
-- Large images can take several minutes to copy into the platform—plan a maintenance window.  
-- Keep the VNC console handy; you’ll need it to interact with the installer once the VPS boots from your ISO.
+<Info>
+  Uploading a custom ISO lets you boot recovery toolkits, bespoke installers, or
+  legacy operating systems that are not part of the EDBB library. The upload is
+  temporary—plan to install or capture data within the retention window.
+</Info>
 
 ---
 
-## Upload the ISO to EDBB
+## Quick Health Check
+
+<CardGroup cols={3}>
+  <Card title="🌐 Direct Download Link">
+    Host the ISO on a public HTTP/HTTPS URL without authentication, captchas, or
+    one-time tokens. Object storage with static links works best.
+  </Card>
+  <Card title="🕒 Maintenance Window">
+    The VPS reboots when the ISO is mounted. Schedule a maintenance slot so users
+    aren’t surprised by downtime.
+  </Card>
+  <Card title="🖥️ Console Access">
+    Keep the portal console (or your VNC client) ready—you’ll need it to interact
+    with the installer once the VPS boots from the image.
+  </Card>
+</CardGroup>
+
+---
+
+## Upload the ISO to the Portal
 
 <Steps>
-  <Step title="Open the service dashboard">
-    Sign in at <a href="https://my.edbb.com/clientarea.php" target="_blank">my.edbb.com</a>, go to <strong>Services</strong>, and select the VPS.
+  <Step title="Open Installation → Custom Image">
+    Sign in to the <a href="https://my.edbb.com/clientarea.php" target="_blank" rel="noreferrer">EDBB VPS Portal</a>, open your VPS, and switch to <strong>Installation</strong>. Choose the <strong>Custom Image</strong> tab.
   </Step>
-  <Step title="Launch the custom ISO workflow">
-    Click <strong>ISO Images</strong> &rarr; <strong>Custom ISO</strong>, then choose <strong>Download ISO</strong>.
+  <Step title="Paste the ISO URL">
+    Select <strong>Download ISO</strong>, paste the direct link (for example, <code>https://cdn.example.com/os/custom.iso</code>), and confirm.
   </Step>
-  <Step title="Paste the direct download link">
-    Provide the full URL to your ISO (for example, <code>https://example.com/images/my-appliance.iso</code>) and confirm.
-  </Step>
-  <Step title="Wait for the download to finish">
-    The portal shows a progress bar. Leave the page open until the status switches to <strong>Ready</strong>.
+  <Step title="Wait for the transfer">
+    The portal downloads the file into your account. Leave the page open until the status changes to <strong>Ready</strong>.
+    <div style={{marginTop: "16px"}}>
+      <img src="/assets/vps-mount-iso-co.png" alt="Custom ISO download in the Installation tab" style={{width: "100%", maxWidth: "820px", borderRadius: "16px", border: "1px solid rgba(0,0,0,0.08)"}} />
+    </div>
   </Step>
 </Steps>
 
-Uploaded files are stored under an internal name (e.g., `xxxx/iso/KVM_xxxxx.iso`). That filename is what you’ll see when mounting the image.
+<Callout type="info">
+  Completed uploads receive an internal filename such as <code>xxxx/iso/KVM_custom_12345.iso</code>. Jot this down—you will select it in the mounting step.
+</Callout>
 
 ---
 
-## Mount and Boot From the ISO
+## Mount and Boot the ISO
 
-1. Head to the **Mount ISO** tab and pick your newly uploaded file.  
-2. Tick **Force reset & boot from the selected ISO**, then press **Mount ISO**.  
-3. Launch the noVNC console to watch the boot sequence and interact with the installer.  
-4. When you’re finished, return to the portal and unmount the ISO so the VPS boots from disk on the next restart.
+<Steps>
+  <Step title="Switch to ISO Boot">
+    Stay on the <strong>Installation</strong> view and open the <strong>ISO Boot</strong> sub-tab.
+  </Step>
+  <Step title="Select your custom file">
+    Pick the uploaded ISO from the dropdown list and enable <strong>Force reset & boot from the selected ISO</strong>.
+  </Step>
+  <Step title="Mount & follow the installer">
+    Click <strong>Mount ISO</strong>. The VPS reboots into the image—use the console to work through the installer or recovery environment.
+  </Step>
+</Steps>
 
-Need a refresher on the mounting workflow? See <a href="./mount-iso-image">Mount an ISO Image</a>.
+Need a refresher on console controls or unmounting? Review the <a href="./mount-iso-image">Mount ISO</a> guide.
 
 ---
 
-## Retention & Housekeeping
+## Retention & Cleanup
 
-- Custom ISOs remain on the platform for **24 hours**. Re-upload them if you need to reuse the image later.  
-- Delete the ISO manually after installation if it contains sensitive software or licensing data.  
-- Make sure you have a backup copy—ISOs are removed automatically when they expire.
+- Custom ISOs stay available for **24 hours**. Re-upload them if you need another session later.  
+- For sensitive media, remove the ISO manually once you finish the installation.  
+- Keep local copies—expired files are purged automatically and cannot be restored.
 
-<Note>
-  If the download fails to complete, verify that the link is direct (no query redirects) and publicly reachable from the internet. You can host ISOs on any HTTPS-capable object storage bucket or web server.
-</Note>
+<Callout type="warning">
+  Downloads that fail usually indicate an inaccessible URL. Verify the link by
+  running <code>curl -I &lt;your-link&gt;</code> from an external network and ensure
+  it returns HTTP 200 without redirects.
+</Callout>
