--- a/vps-management/enable-vnc-server.mdx
+++ b/vps-management/enable-vnc-server.mdx
@@ -39,7 +39,7 @@ description: "Turn VNC on or off from the EDBB portal so you can reach the conso
   </Step>
 </Steps>
 
-![VNC Enabled](/assets/vnc-enabled-panel.png)
+![VNC access controls in the quick action panel](/assets/vnc-stop-open-console-hostname.png)
 
 ---
 
