--- a/vps-management/ip-address-information.mdx
+++ b/vps-management/ip-address-information.mdx
@@ -23,7 +23,7 @@ description: "Find IPv4, IPv6, gateway, and DNS details for your VPS on the Netw
   </Step>
 </Steps>
 
-![Network Tab](/assets/vps-network-tab.png)
+![Network tab with IPv4, IPv6, and DNS details](/assets/vps-network-info.png)
 
 ---
 
