--- a/vps-management/edis-cloud-init-vps-installation.mdx
+++ b/vps-management/edis-cloud-init-vps-installation.mdx
@@ -49,6 +49,9 @@ Cloud-Init is a lightweight framework baked into many Linux templates. On first 
   </Step>
   <Step title="Upload the qcow2 file">
     Drag & drop your qcow2 (or click <em>browse</em>). The portal stores the image temporarily for this reinstall.
+    <div style={{marginTop: "16px"}}>
+      <img src="/assets/vps-upload-iso.png" alt="Upload custom Cloud-Init image" style={{width: "100%", maxWidth: "820px", borderRadius: "16px", border: "1px solid rgba(0,0,0,0.08)"}} />
+    </div>
   </Step>
   <Step title="Configure Expert mode (optional)">
     Toggle <strong>Expert mode</strong> if you want to paste Cloud-Init user-data or SSH keys. Supply a strong password—or rely on keys only—and tick the confirmation acknowledging that the disk will be erased.
